--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>Nothing to see here...</title>
   </head>
   <body>
-    <img src="nothing.webp" />
+    <center><img src="nothing.webp" /></center>
   </body>
 </html>
